A11y color contrast fixes

--- a/web/css/layout/_reviews.less
+++ b/web/css/layout/_reviews.less
@@ -150,6 +150,9 @@
     }
     .rating-result > span {
         color: @rating__color;
+        > span {
+            color: @base__color;
+        }
     }
     .review-control-vote {
         &::before,
